manifests/prd/external-dns-cloudflare/Service-external-dns-cloudflare.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: external-dns-cloudflare
    app.kubernetes.io/name: external-dns
  name: external-dns-cloudflare
  namespace: external-dns
spec:
  ports:
    - name: http
      port: 7979
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: external-dns-cloudflare
    app.kubernetes.io/name: external-dns
  type: ClusterIP
