manifests/prd/external-dns-cloudflare/CiliumNetworkPolicy-external-dns-cloudflare.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-dns-cloudflare
  namespace: external-dns
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toFQDNs:
        - matchName: api.cloudflare.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: external-dns-cloudflare
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmagent
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "7979"
              protocol: TCP
